--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -940,16 +940,15 @@ var acct = (async function(){
 	console.log(loan_amt);
 	console.log(loan_term);
  	const contract = web3.utils.toChecksumAddress(nft_k);
-	//var _data1 = new web3.eth.Contract(abi, contract_address1).approve("0xa2d29148490693b0b40f2fc3eb81e8445bf28bde", nft_id).encodeABI();
-	//await web3.eth.sendTransaction({'gas': web3.utils.toHex(100000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address1, 'nonce': web3.utils.toHex(_nonce),'data': _data1})
-        var _data = new web3.eth.Contract(abi, contract_address).methods.createLoanRequest(contract, nft_id, loan_amt, loan_term).encodeABI();
+	
+        var _data = new web3.eth.Contract(abi, contract_address).methods.createLoanRequest('0x65C9bEa57ee83c4595cCf3EC66a461914a351aBC', 24, 1000, 4).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
 	_nonce = result
         console.log(account)
 		
-	await web3.eth.sendTransaction({'gas': web3.utils.toHex(100000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'nonce': web3.utils.toHex(_nonce),'data': _data})
+	await web3.eth.sendTransaction({'gas': web3.utils.toHex(200000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'nonce': web3.utils.toHex(_nonce),'data': _data})
          //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
             //console.log(accounts[0])
@@ -985,8 +984,8 @@ var acct = (async function(){
 	var loan_amt = localStorage.getItem("Loan Amount");
 	var loan_term = localStorage.getItem("Loan Term");
 	
- 	//const contract_address1 = web3.utils.toChecksumAddress("0x19545d326fa247c495dcdbb99f88e0faebb956e5")
-        var _data = new web3.eth.Contract(abi, contract_address).methods.ReturnToBorrower(nft_k).encodeABI();
+ 	const contract = web3.utils.toChecksumAddress(nft_k)
+        var _data = new web3.eth.Contract(abi, contract_address).methods.ReturnToBorrower(contract).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 		var amt = await contract_bal.methods.loan_amount_list(add1x).call();
